--- a/Dev Profile/Base.lproj/Main.storyboard
+++ b/Dev Profile/Base.lproj/Main.storyboard
@@ -25,50 +25,50 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="24i-bL-Huf">
-                                <rect key="frame" x="16" y="145" width="110" height="110"/>
+                                <rect key="frame" x="16" y="155" width="110" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="110" id="1ec-os-aUh"/>
                                     <constraint firstAttribute="width" constant="110" id="NLf-aL-pT1"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9F-jr-RiN">
-                                <rect key="frame" x="136" y="186.5" width="94" height="27.5"/>
+                                <rect key="frame" x="136" y="211.5" width="94" height="27.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="wLz-y6-m54">
-                                <rect key="frame" x="34" y="344" width="700" height="343.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wLz-y6-m54">
+                                <rect key="frame" x="26" y="354" width="716" height="353"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="Do3-oz-aCZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="343.5" height="343.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="353"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="fmi-J7-4Rx"/>
                                             <constraint firstAttribute="width" secondItem="Do3-oz-aCZ" secondAttribute="height" multiplier="1:1" id="t36-JO-YWR"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="tIg-XP-7vG">
-                                        <rect key="frame" x="356.5" y="0.0" width="343.5" height="343.5"/>
+                                        <rect key="frame" x="363" y="0.0" width="353" height="353"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="e5R-fn-woV">
-                                <rect key="frame" x="34" y="695.5" width="700" height="345"/>
+                                <rect key="frame" x="26" y="715" width="716" height="353"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="ELv-sA-wgA">
-                                        <rect key="frame" x="0.0" y="0.0" width="345" height="345"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="353"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="H8m-WU-KRV"/>
                                             <constraint firstAttribute="width" secondItem="ELv-sA-wgA" secondAttribute="height" multiplier="1:1" id="HCb-mI-CGa"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="s2r-tf-DHI">
-                                        <rect key="frame" x="355" y="0.0" width="345" height="345"/>
+                                        <rect key="frame" x="363" y="0.0" width="353" height="353"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-DU-ogX">
-                                <rect key="frame" x="268" y="275" width="232" height="57"/>
+                                <rect key="frame" x="268" y="285" width="232" height="57"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdv-Z1-jCS">
                                         <rect key="frame" x="0.0" y="0.0" width="57" height="57"/>
@@ -88,27 +88,41 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="top" secondItem="24i-bL-Huf" secondAttribute="bottom" constant="20" id="1kJ-eD-CQh"/>
-                            <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="125" id="MEW-eV-Mt1"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wLz-y6-m54" secondAttribute="trailing" constant="14" id="PrB-Rx-tC6"/>
-                            <constraint firstItem="e5R-fn-woV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="14" id="R5O-p8-Lkh"/>
+                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" id="Da4-nr-l6Z"/>
+                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="15" id="HTZ-8F-pqZ"/>
+                            <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="135" id="MEW-eV-Mt1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wLz-y6-m54" secondAttribute="trailing" constant="6" id="PrB-Rx-tC6"/>
+                            <constraint firstItem="e5R-fn-woV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="6" id="R5O-p8-Lkh"/>
+                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" id="RTr-k2-oGn"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="leading" secondItem="24i-bL-Huf" secondAttribute="trailing" constant="10" id="RwO-X3-MSt"/>
                             <constraint firstItem="e5R-fn-woV" firstAttribute="top" secondItem="wLz-y6-m54" secondAttribute="bottom" constant="8" id="Ufq-og-ugF"/>
-                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" id="Wne-JG-MRz"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Xzz-6d-6cl"/>
-                            <constraint firstItem="wLz-y6-m54" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="14" id="Z0H-bc-a8N"/>
+                            <constraint firstItem="wLz-y6-m54" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="6" id="Z0H-bc-a8N"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZNm-A9-XRN"/>
                             <constraint firstItem="24i-bL-Huf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ckx-f3-PtX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="e5R-fn-woV" secondAttribute="trailing" constant="14" id="dpk-k6-Uo6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e5R-fn-woV" secondAttribute="trailing" constant="6" id="dpk-k6-Uo6"/>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f7g-nj-17v"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fIl-qW-XJT"/>
                             <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="6IO-DU-ogX" secondAttribute="bottom" constant="12" id="zoM-tC-cPP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="HTZ-8F-pqZ"/>
+                                <exclude reference="RTr-k2-oGn"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="constraints">
+                                <exclude reference="Da4-nr-l6Z"/>
+                                <include reference="HTZ-8F-pqZ"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4673" y="-1953"/>
+            <point key="canvasLocation" x="5071" y="-1956"/>
         </scene>
     </scenes>
     <resources>
