--- a/Dev Profile/Base.lproj/Main.storyboard
+++ b/Dev Profile/Base.lproj/Main.storyboard
@@ -19,20 +19,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="C4j-Pl-tEU">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="190"/>
+                                <rect key="frame" x="0.0" y="0.0" width="354" height="190"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="190" id="jMM-Su-sdE"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="24i-bL-Huf">
-                                <rect key="frame" x="16" y="135" width="110" height="110"/>
+                                <rect key="frame" x="16" y="125" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="1ec-os-aUh"/>
-                                    <constraint firstAttribute="width" constant="110" id="NLf-aL-pT1"/>
+                                    <constraint firstAttribute="height" constant="100" id="1ec-os-aUh"/>
+                                    <constraint firstAttribute="width" constant="100" id="NLf-aL-pT1"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9F-jr-RiN">
-                                <rect key="frame" x="136" y="191.5" width="94" height="27.5"/>
+                                <rect key="frame" x="126" y="186.5" width="94" height="27.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -40,11 +40,11 @@
                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="32"/>
                                 </variation>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wLz-y6-m54">
-                                <rect key="frame" x="22" y="305" width="331" height="160.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wLz-y6-m54" userLabel="Stack View 1">
+                                <rect key="frame" x="22" y="315" width="310" height="150"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="Do3-oz-aCZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="160.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="fmi-J7-4Rx"/>
                                             <constraint firstAttribute="width" secondItem="Do3-oz-aCZ" secondAttribute="height" multiplier="1:1" id="t36-JO-YWR"/>
@@ -56,7 +56,7 @@
                                         </variation>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="tIg-XP-7vG">
-                                        <rect key="frame" x="170.5" y="0.0" width="160.5" height="160.5"/>
+                                        <rect key="frame" x="160" y="0.0" width="150" height="150"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -73,11 +73,11 @@
                                     </mask>
                                 </variation>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="e5R-fn-woV">
-                                <rect key="frame" x="22" y="473.5" width="331" height="160.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="e5R-fn-woV" userLabel="Stack View 2">
+                                <rect key="frame" x="22" y="475" width="310" height="150"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="ELv-sA-wgA">
-                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="160.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="H8m-WU-KRV"/>
                                             <constraint firstAttribute="width" secondItem="ELv-sA-wgA" secondAttribute="height" multiplier="1:1" id="HCb-mI-CGa"/>
@@ -89,7 +89,7 @@
                                         </variation>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="s2r-tf-DHI">
-                                        <rect key="frame" x="170.5" y="0.0" width="160.5" height="160.5"/>
+                                        <rect key="frame" x="160" y="0.0" width="150" height="150"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -106,25 +106,28 @@
                                     </mask>
                                 </variation>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-DU-ogX">
-                                <rect key="frame" x="70.5" y="255" width="234" height="35"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-DU-ogX" userLabel="Actions">
+                                <rect key="frame" x="63" y="235" width="228" height="75"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdv-Z1-jCS">
-                                        <rect key="frame" x="0.0" y="0.0" width="58" height="35"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="58" height="75"/>
                                         <state key="normal" image="cameraButton"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P3b-Ro-JMh">
-                                        <rect key="frame" x="88" y="0.0" width="58" height="35"/>
+                                        <rect key="frame" x="85" y="0.0" width="58" height="75"/>
                                         <state key="normal" image="favoriteButton"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OJZ-A8-elq">
-                                        <rect key="frame" x="176" y="0.0" width="58" height="35"/>
+                                        <rect key="frame" x="170" y="0.0" width="58" height="75"/>
                                         <state key="normal" image="inboxButton"/>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="vvj-Do-UO5"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hHg-DV-ocf">
-                                <rect key="frame" x="302" y="907" width="230" height="60"/>
+                                <rect key="frame" x="269" y="954" width="230" height="60"/>
                                 <color key="backgroundColor" red="0.84881085157394409" green="0.27903127670288086" blue="0.11919202655553818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="230" id="TE3-0p-4Et"/>
@@ -138,28 +141,26 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6IO-DU-ogX" firstAttribute="top" secondItem="24i-bL-Huf" secondAttribute="bottom" constant="10" id="0Iw-5O-abA"/>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="20" id="1Jv-3g-wvo"/>
-                            <constraint firstItem="6IO-DU-ogX" firstAttribute="top" secondItem="24i-bL-Huf" secondAttribute="bottom" constant="10" id="1kJ-eD-CQh"/>
-                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="15" id="Da4-nr-l6Z"/>
+                            <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="25" id="Da4-nr-l6Z"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="15" id="HTZ-8F-pqZ"/>
-                            <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="115" id="MEW-eV-Mt1"/>
-                            <constraint firstItem="hHg-DV-ocf" firstAttribute="top" secondItem="e5R-fn-woV" secondAttribute="bottom" constant="70" id="Mjq-w1-ifV"/>
+                            <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="105" id="MEW-eV-Mt1"/>
                             <constraint firstItem="hHg-DV-ocf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N3k-rf-BBw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6IO-DU-ogX" secondAttribute="trailing" constant="8" id="Nqe-zI-7Ir"/>
+                            <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="6IO-DU-ogX" secondAttribute="bottom" constant="5" id="Ovx-Bd-oDQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wLz-y6-m54" secondAttribute="trailing" constant="6" id="PrB-Rx-tC6"/>
                             <constraint firstItem="e5R-fn-woV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="6" id="R5O-p8-Lkh"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" id="RTr-k2-oGn"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="leading" secondItem="24i-bL-Huf" secondAttribute="trailing" constant="10" id="RwO-X3-MSt"/>
-                            <constraint firstItem="e5R-fn-woV" firstAttribute="top" secondItem="wLz-y6-m54" secondAttribute="bottom" constant="8" id="Ufq-og-ugF"/>
-                            <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="24i-bL-Huf" secondAttribute="bottom" constant="60" id="Xff-vb-ye4"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Xzz-6d-6cl"/>
                             <constraint firstItem="wLz-y6-m54" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="6" id="Z0H-bc-a8N"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZNm-A9-XRN"/>
                             <constraint firstItem="24i-bL-Huf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ckx-f3-PtX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="e5R-fn-woV" secondAttribute="trailing" constant="6" id="dpk-k6-Uo6"/>
+                            <constraint firstItem="e5R-fn-woV" firstAttribute="top" secondItem="wLz-y6-m54" secondAttribute="bottom" constant="10" id="eXW-Gp-Lpq"/>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f7g-nj-17v"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fIl-qW-XJT"/>
-                            <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="6IO-DU-ogX" secondAttribute="bottom" constant="15" id="zoM-tC-cPP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <variation key="default">
@@ -167,10 +168,10 @@
                                 <exclude reference="hHg-DV-ocf"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="1Jv-3g-wvo"/>
-                                <exclude reference="Nqe-zI-7Ir"/>
                                 <exclude reference="HTZ-8F-pqZ"/>
                                 <exclude reference="RTr-k2-oGn"/>
+                                <exclude reference="1Jv-3g-wvo"/>
+                                <exclude reference="Nqe-zI-7Ir"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
@@ -178,20 +179,18 @@
                                 <include reference="hHg-DV-ocf"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="1Jv-3g-wvo"/>
-                                <exclude reference="1kJ-eD-CQh"/>
-                                <include reference="Nqe-zI-7Ir"/>
-                                <exclude reference="f7g-nj-17v"/>
                                 <exclude reference="Da4-nr-l6Z"/>
                                 <include reference="HTZ-8F-pqZ"/>
-                                <exclude reference="zoM-tC-cPP"/>
+                                <include reference="1Jv-3g-wvo"/>
+                                <include reference="Nqe-zI-7Ir"/>
+                                <exclude reference="f7g-nj-17v"/>
                             </mask>
                         </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4997.65625" y="-2200.1953125"/>
+            <point key="canvasLocation" x="3661.5999999999999" y="-2656.8215892053977"/>
         </scene>
     </scenes>
     <resources>
